manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cormorant-namespace
  labels:
    istio-injection: enabled
