manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cormorant
  namespace: cormorant-namespace
  labels:
    app: cormorant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cormorant
  template:
    metadata:
      labels:
        app: cormorant
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: cormorant
        image: ghcr.io/drewpypro/cormorant:latest
        ports:
        - containerPort: 80
