manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cormorant
  namespace: cormorant-namespace
spec:
  selector:
    app: cormorant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
