manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cormorant-virtual-service
  namespace: cormorant-namespace
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/cormorant"
      rewrite:
        uri: "/index.html"
      route:
        - destination:
            host: cormorant
            port:
              number: 80
